# network-telnet

./: LICENSE  README.md  network-telnet.cabal
src/Network/Protocol/: Telnet.hs
src/Network/Protocol/Telnet/: Internal.hs
tests/: Instances.hs  Properties.hs  Spec.hs
