name:                network-telnet
version:             0.1.0.0
synopsis: a telnet protocol implementation

-- A longer description of the package.
-- description:

license:             MIT
license-file:        LICENSE
author:              Samuel Tesla
maintainer:          samuel.tesla@gmail.com

-- A copyright notice.
-- copyright:

category:            Network
build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules: Network.Protocol.Telnet.Internal
  build-depends:       base >=4.6 && <4.7,
                       bytestring,
                       mtl,
                       network,
                       transformers
  ghc-options:         -Wall -Werror

test-suite properties
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Spec.hs
  build-depends: base,
                 bytestring,
                 hspec,
                 QuickCheck >= 2,
                 network-telnet
  ghc-options: -Wall -Werror
